[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tulving"
version = "0.1.1"
description = "The context-budget engine for AI agents — persistent typed memory with token-budget curation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Vanxa", email = "info@vanxa.com" }]
keywords = ["ai", "agents", "memory", "context", "curation", "mcp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "hnswlib>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.5",
]
local = [
    "sentence-transformers>=3",
]
openai = [
    "openai>=1.30",
]
mcp = [
    "mcp>=1.0",
    "anyio>=4",
]
anthropic = [
    "anthropic>=0.40",
]

[project.scripts]
tulving-mcp = "tulving.mcp.server:main"

[project.urls]
Author = "https://github.com/govanxa"

[tool.hatch.build.targets.wheel]
packages = ["tulving"]

[tool.hatch.build.targets.sdist]
include = [
    "tulving/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
files = ["tulving"]

[[tool.mypy.overrides]]
module = "hnswlib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Optional extras, imported only inside gated adapter constructors (D9).
module = ["sentence_transformers", "openai"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Optional [anthropic] extra, lazily imported inside AnthropicAdapter (D9).
module = "anthropic"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "SIM",              # simplify
    "RUF",
    "A001",             # builtin shadowing at module level (D6 backstop; NOT A003 —
                        # it would flag the architecture-mandated MemoryEntry.id/type)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117"]

[tool.coverage.run]
source = ["tulving"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
